fix: fixed get mapping endpoints